fucking->so fucking

--- a/friends.html
+++ b/friends.html
@@ -116,7 +116,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>your screen is fucking big</span>
+      <span>your screen is so fucking big</span>
     </div>
     <script
       src="https://kit.fontawesome.com/c458a78605.js"
